--- a/index.html
+++ b/index.html
@@ -1,103 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
-  <body>
-    <header class="container-fluid text-center text-white text-bg-dark p-3">
-      <h1>Weather Dashboard</h1>
-    </header>
-    <main class="container-fluid">
-      <div class="row">
-        <aside class="col-lg-3">
-          <h2>Search for a city:</h2>
-          <form>
-            <div class="mb-3">
-              <input
-                type="text"
-                class="form-control"
-                id="user-input"
-                aria-describedby="userInput"
-              />
-            </div>
-            <button type="submit" class="btn btn-primary" style="width: 100%" id="input-button">
-              Search
-            </button>
-          </form>
-          <hr />
-        </aside>
-        <div id="weather-display" class="col-lg-9">
-          <div id="current-day">
-            <div class="card row m-2 border-dark just" style="width: 70%">
-              <div class="card-body">
-                <h2 id="current-day-date" class="card-title" style="display: inline">Card title</h2>
-                <img src="" />
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+    integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
+
+<body>
+  <header class="container-fluid text-center text-white text-bg-dark p-3">
+    <h1>Weather Dashboard</h1>
+  </header>
+  <main class="container-fluid">
+    <div class="row">
+      <aside class="col-lg-3">
+        <h2>Search for a city:</h2>
+        <form>
+          <div class="mb-3">
+            <input type="text" class="form-control" id="user-input" aria-describedby="userInput" />
+          </div>
+          <button type="submit" class="btn btn-primary" style="width: 100%" id="input-button">
+            Search
+          </button>
+        </form>
+        <hr />
+        <div id="button-list"></div>
+      </aside>
+      <div id="weather-display" class="col-lg-9">
+        <div id="current-day">
+          <div class="card row m-2 border-dark just" style="width: 70%">
+            <div class="card-body">
+              <h2 id="current-day-date" class="card-title" style="display: inline">Card title</h2>
+              <img src="" />
+              <p class="card-text">Temp:</p>
+              <p class="card-text">Wind:</p>
+              <p class="card-text">Humidity:</p>
             </div>
           </div>
-          <div id="five-day" class="row m-2" style="width: 70%">
-            <div class="card m-1 border-dark" style="width: 200px">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <img src="" />
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
+        </div>
+        <div id="five-day" class="row m-2" style="width: 70%">
+          <div class="card m-1 border-dark" style="width: 200px">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <img src="" />
+              <p class="card-text">Temp:</p>
+              <p class="card-text">Wind:</p>
+              <p class="card-text">Humidity:</p>
             </div>
-            <div class="card m-1 border-dark" style="width: 200px">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <img src="" />
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
+          </div>
+          <div class="card m-1 border-dark" style="width: 200px">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <img src="" />
+              <p class="card-text">Temp:</p>
+              <p class="card-text">Wind:</p>
+              <p class="card-text">Humidity:</p>
             </div>
-            <div class="card m-1 border-dark" style="width: 200px">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <img src="" />
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
+          </div>
+          <div class="card m-1 border-dark" style="width: 200px">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <img src="" />
+              <p class="card-text">Temp:</p>
+              <p class="card-text">Wind:</p>
+              <p class="card-text">Humidity:</p>
             </div>
-            <div class="card m-1 border-dark" style="width: 200px">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <img src="" />
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
+          </div>
+          <div class="card m-1 border-dark" style="width: 200px">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <img src="" />
+              <p class="card-text">Temp:</p>
+              <p class="card-text">Wind:</p>
+              <p class="card-text">Humidity:</p>
             </div>
-            <div class="card m-1 border-dark" style="width: 200px">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <img src="" />
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
+          </div>
+          <div class="card m-1 border-dark" style="width: 200px">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <img src="" />
+              <p class="card-text">Temp:</p>
+              <p class="card-text">Wind:</p>
+              <p class="card-text">Humidity:</p>
             </div>
           </div>
         </div>
       </div>
-    </main>
-    <script src="./assets/js/style.js"></script>
-  </body>
+    </div>
+  </main>
+  <script src="./assets/js/style.js"></script>
+</body>
+
 </html>
